# swarf

./: .gitignore  .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  USAGE.md  go.mod  go.sum  main.go  mise.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CONFIGURATION.md  ROADMAP.md
internal/clone/: clone.go  clone_test.go
internal/config/: config.go  config_test.go
internal/console/: console.go  console_test.go
internal/daemon/: cli.go  debounce.go  debounce_test.go  runner.go  runner_test.go  service.go  util.go
internal/docs/: docs.go  docs_test.go
internal/doctor/: doctor.go  doctor_test.go
internal/enter/: enter.go  enter_test.go
internal/exclude/: exclude.go  exclude_test.go
internal/gitexec/: gitexec.go  gitexec_test.go
internal/initialize/: initialize.go  initialize_test.go
internal/link/: link.go  link_test.go
internal/paths/: paths.go  paths_test.go
internal/pull/: pull.go  pull_test.go
internal/status/: status.go  status_test.go
internal/sweep/: sweep.go  sweep_test.go
internal/testutil/: testutil.go
internal/unlink/: unlink.go  unlink_test.go
src/swarf/: __init__.py  _version.py  cli.py  clone.py  config.py  console.py  doctor.py  enter.py  exclude.py  git.py  init.py  (+5 more)
tests/: conftest.py  helpers.py  test_config.py  test_daemon_debounce.py  test_daemon_git.py  test_daemon_lifecycle.py  test_daemon_rclone.py  test_doctor.py  test_enter.py  test_exclude.py  test_init.py  test_integration.py  test_link.py  test_smoke.py  test_status.py  test_sweep.py
(+12 files in other folders)
