[tool.uv]
package = true

[project]
name = "swarf"
version = "0.1.0"
description = "Invisible, auto-syncing personal storage for any git repo"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Matt Schulkind" }]
keywords = ["git", "developer-tools", "ai-agents", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "cyclopts>=3.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "watchfiles>=1.0",
]

[project.scripts]
swarf = "swarf.cli:main"

[project.urls]
Repository = "https://github.com/mschulkind-oss/swarf"
Issues = "https://github.com/mschulkind-oss/swarf/issues"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "basedpyright>=1.29",
    "pytest-asyncio>=0.26",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarf"]
